--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
     </style>
     <script>
-        // Function to request location permission
+        // Request location permission
         function requestLocationPermission() {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(
@@ -30,8 +30,7 @@
             }
         }
 
-        // Request location permission on page load
-        window.onload = function() {
+        window.onload = function () {
             requestLocationPermission();
         };
     </script>
@@ -39,13 +38,11 @@
 <body>
     <div id="unityContainer" style="width: 100%; height: 100%;"></div>
     <script>
-        // Unity WebGL loader script
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/UnityLoader.js";
         var config = {
-            dataUrl: buildUrl + "/Build.data",
-            frameworkUrl: buildUrl + "/Build.framework.js",
-            codeUrl: buildUrl + "/Build.wasm",
+            dataUrl: buildUrl + "/mapboxtest.data",
+            frameworkUrl: buildUrl + "/mapboxtest.framework.js",
+            codeUrl: buildUrl + "/mapboxtest.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "YourCompany",
             productName: "YourProduct",
@@ -53,7 +50,7 @@
         };
 
         var script = document.createElement("script");
-        script.src = loaderUrl;
+        script.src = buildUrl + "/mapboxtest.loader.js";
         script.onload = () => createUnityInstance(document.querySelector("#unityContainer"), config);
         document.body.appendChild(script);
     </script>
